CNTRL-lightbox: fixed click outside on mobile

--- a/src/Components/Lightbox/LightBox.module.scss
+++ b/src/Components/Lightbox/LightBox.module.scss
@@ -42,8 +42,10 @@
   display: block;
   cursor: pointer;
   background-color: transparent;
-  width: fit-content;
-  height: fit-content;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
 };
 
 .imgWrapper {
@@ -65,8 +67,6 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  max-width: 100%;
-  max-height: 100%;
 }
 
 .caption {
@@ -202,21 +202,6 @@
   align-items: flex-end;
 }
 
-.thumbsContainerVertical.thumbsAlignStart {
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.thumbsContainerVertical.thumbsAlignCenter {
-  align-items: center;
-  justify-content: center;
-}
-
-.thumbsContainerVertical.thumbsAlignEnd {
-  align-items: center;
-  justify-content: flex-end;
-}
-
 .thumbItem {
   all: unset;
   display: inline-flex;
@@ -228,12 +213,6 @@
   &:hover {
     opacity: var(--thumb-hover) !important;
   }
-}
-
-.thumbImage {
-  display: block;
-  height: 100%;
-  @include size(width, 80);
 }
 
 .closeButton {
